--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: rr2
 Type: Package
 Title: R2s for Regression Models
-Version: 0.1.0
+Version: 0.2.0
 Authors@R: c(
     person("Anthony", "Ives", , "arives@wisc.edu", c("aut", "cre")),
     person("Daijiang", "Li", , "daijianglee@gmail.com", role = "ctb"))
-Description: This package provides three methods to calculate R2 for models
+Description: Three methods to calculate R2 for models
     with correlated errors, including Phylogenetic GLS, Phylogenetic 
     Logistic Regression, LMMs, and GLMM. See details in Ives preprint
     at biorxiv (https://doi.org/10.1101/144170).
