--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,6 +11,7 @@ export(partialR2adj)
 importFrom(stats,anova)
 importFrom(stats,binomial)
 importFrom(stats,family)
+importFrom(stats,fitted)
 importFrom(stats,glm)
 importFrom(stats,lm)
 importFrom(stats,logLik)
@@ -22,6 +23,7 @@ importFrom(stats,optim)
 importFrom(stats,pchisq)
 importFrom(stats,pnorm)
 importFrom(stats,poisson)
+importFrom(stats,predict)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,rnorm)
