extract code to transform phylo to be a function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,7 @@ export(binaryPGLMM)
 export(inv.logit)
 export(partialR2)
 export(partialR2adj)
+export(transf_phy)
 importFrom(stats,anova)
 importFrom(stats,binomial)
 importFrom(stats,family)
