--- a/NAMESPACE
+++ b/NAMESPACE
@@ -9,6 +9,7 @@ export(inv.logit)
 export(partialR2)
 export(partialR2adj)
 export(transf_phy)
+importFrom(lme4,VarCorr)
 importFrom(stats,anova)
 importFrom(stats,binomial)
 importFrom(stats,family)
