--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,7 @@ Description: Three methods to calculate R2 for models
     with correlated errors, including Phylogenetic GLS, Phylogenetic 
     Logistic Regression, LMMs, and GLMM. See details in Ives preprint
     at biorxiv (https://doi.org/10.1101/144170).
-License: GPL
+License: GPL-3
 Depends: R (>= 3.0), stats
 Encoding: UTF-8
 LazyData: true
