--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,7 @@ export(transf_phy)
 importFrom(lme4,VarCorr)
 importFrom(stats,anova)
 importFrom(stats,binomial)
+importFrom(stats,dnorm)
 importFrom(stats,family)
 importFrom(stats,fitted)
 importFrom(stats,glm)
@@ -26,6 +27,7 @@ importFrom(stats,pchisq)
 importFrom(stats,pnorm)
 importFrom(stats,poisson)
 importFrom(stats,predict)
+importFrom(stats,qnorm)
 importFrom(stats,quantile)
 importFrom(stats,reorder)
 importFrom(stats,rnorm)
