--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -5,11 +5,10 @@ Version: 1.0.0
 Authors@R: c(
     person("Anthony", "Ives", , "arives@wisc.edu", c("aut", "cre")),
     person("Daijiang", "Li", , "daijianglee@gmail.com", role = "ctb"))
-Description: Three methods to calculate R2 for models
-    with correlated errors, including Phylogenetic GLS, 
-    Phylogenetic Logistic Regression, Linear Mixed Models (LMMs), and 
-    Generalized Linear Mixed Models (GLMMs). 
-    See details in Ives 2018 <doi:10.1093/sysbio/syy060>.
+Description: Three methods to calculate R2 for models with correlated errors, 
+    including Phylogenetic GLS, Phylogenetic Logistic Regression, Linear Mixed 
+    Models (LMMs), and Generalized Linear Mixed Models (GLMMs). See details in 
+    Ives 2018 <doi:10.1093/sysbio/syy060>.
 License: GPL-3
 Depends: R (>= 3.0), stats
 Encoding: UTF-8
