--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,6 +10,7 @@ export(partialR2)
 export(partialR2adj)
 export(transf_phy)
 importFrom(lme4,VarCorr)
+importFrom(phyr,pglmm_predicted_values)
 importFrom(stats,anova)
 importFrom(stats,binomial)
 importFrom(stats,dnorm)
